Fixed subheader collapsable behaviour

--- a/packages/dashboard/src/components/sideMenu/style.less
+++ b/packages/dashboard/src/components/sideMenu/style.less
@@ -39,7 +39,8 @@
             transform: rotate(180deg);
         }
 
-        .sideMenuHeader {
+        .sideMenuHeader,
+        .sideMenuSubHeader {
             display: none;
         }
 
